tests/baselines/reference/parserRegularExpressionDivideAmbiguity7.errors.txt
parserRegularExpressionDivideAmbiguity7.ts(1,2): error TS2304: Cannot find name 'a'.
parserRegularExpressionDivideAmbiguity7.ts(2,3): error TS1005: ';' expected.


==== parserRegularExpressionDivideAmbiguity7.ts (2 errors) ====
    (a/8
     ~
!!! error TS2304: Cannot find name 'a'.
     ){}
      ~
!!! error TS1005: ';' expected.
    